[package]
name = "dlogon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
lru = "0.12.3"
promkit = "0.4.4"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
