[package]
name = "logu"
version = "0.1.0"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
edition = "2021"
description = "Log parsing for message aggregation"
repository = "https://github.com/ynqa/logu"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
lru = "0.12.3"
promkit = "0.4.4"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "ynqa/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
